--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "matplotlib>=3.10.3",
+    "notebook>=7.4.3",
     "numpy>=2.2.6",
+    "sumolib>=1.23.1",
 ]
 
 [build-system]
