--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.10.3",
     "notebook>=7.4.3",
     "numpy>=2.2.6",
+    "pre-commit>=4.2.0",
     "sumolib>=1.23.1",
 ]
 
