--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -1,13 +1,20 @@
-# Path of output.rou.alt file
-output_rou_alt_path: "data/output.rou.alt.xml"
-# Path of output.rou file
-output_rou_path: "data/output.rou.xml"
-# Path for edge data frequency config
-edge_data_path: "data/edge_data.add.xml"
-# Path for SUMO log
-log_path: "data/log.xml"
-# Path to write emissions data
-emissions_path: "data/fcd.xml"
+paths_dict:
+  # Path of output.rou.alt file
+  output_rou_alt_path: "data/output.rou.alt.xml"
+  # Path of output.rou file
+  routes_file_path: "data/output.rou.xml"
+  # Path for edge data frequency config
+  edge_data_path: "data/edge_data.add.xml"
+  # Path for SUMO log
+  log_path: "data/log.xml"
+  # Path to write emissions data
+  emissions_path: "data/fcd.xml"
+  # Path to emissions data per vehicle
+  emissions_per_vehicle_path: "data/emissions_per_vehicle.txt"
+  # Path to stats data after simulation
+  stats_path: "data/stats.xml"
+  # Path to tripinfo file
+  trip_info_path: "data/tripinfo.xml"
 
 # Parameters needed to run SUMO
 sumo_config:
