fix: refactor code

--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -5,7 +5,7 @@ episodes: 2
 # Weight for Total Travel Time (TTT) of the network
 TTT_weight: 0
 # Weight for individual travel time of each agent
-individual_travel_time_weight: 0.5
+individual_travel_time_weight: 1
 # Weight for minimising individual emissions
 emissions_weight: 0
 # Total emissions weight
@@ -23,7 +23,7 @@ alpha: 0.1
 # Total available budget for incentives or policies (can be used as a constraint)
 total_budget: 100
 # Whether to use incentives or not
-incentives_mode: true
+incentives_mode: false
 
 # Store all the paths
 paths_dict:
