fix: refactor code

--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -23,7 +23,7 @@ alpha: 0.1
 # Total available budget for incentives or policies (can be used as a constraint)
 total_budget: 100
 # Whether to use incentives or not
-incentives_mode: false
+incentives_mode: true
 
 # Store all the paths
 paths_dict:
@@ -43,14 +43,13 @@ paths_dict:
   stats_path: "data/stats.xml"
   # Path to tripinfo file
   trip_info_path: "data/tripinfo.xml"
+  edges_weights_path: "weights.xml"
 
 # Parameters needed to run SUMO
 sumo_config:
   config_path: "data/config.sumocfg"
   network_path: "data/kamppi.net.xml"
   routes_path: "data/output.rou.xml"
-  edges_weights_path: "weights.xml"
-  edge_frequency_path: "../edge_data.add.xml"
 
 # Edge data frequency
 edge_data_frequency: 500
