--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "notebook>=7.4.3",
     "numpy>=2.2.6",
     "pre-commit>=4.2.0",
+    "sphinx>=8.2.3",
+    "sphinx-rtd-theme>=3.0.2",
     "sumolib>=1.23.1",
 ]
 
