--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -24,7 +24,8 @@ alpha: 0.1
 total_budget: 100
 # Whether to use incentives or not
 incentives_mode: true
-
+# Select route selection strategy
+strategy: "argmin"
 # Store all the paths
 paths_dict:
   # Path of output.rou.alt file
