--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -1,5 +1,5 @@
 # Number of training episodes for the RL agent
-episodes: 2
+episodes: 300
 
 ### Weights for different components of the reward/cost function
 # Weight for Total Travel Time (TTT) of the network
@@ -21,11 +21,11 @@ decay: 0.996
 # Learning rate (α) for Q-learning or other value update algorithms
 alpha: 0.1
 # Total available budget for incentives or policies (can be used as a constraint)
-total_budget: 100
+total_budget: 10000000
 # Whether to use incentives or not
 incentives_mode: true
 # Select route selection strategy
-strategy: "argmin"
+strategy: "logit"
 # Store all the paths
 paths_dict:
   # Path of output.rou.alt file
