--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "marl-incentives"
 version = "0.1.0"
-description = "Add your description here"
+description = "MARL incentives algorithm"
 readme = "README.md"
 authors = [
     { name = "Germán Pardo-González", email = "germanrpardo1@outlook.com" }
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.10.3",
     "numpy>=2.3.1",
     "pre-commit>=4.2.0",
+    "setuptools>=61.0",
     "sphinx>=8.2.3",
     "sphinx-rtd-theme>=3.0.2",
     "sumolib>=1.24.0",
