--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ dependencies = [
     "hatchling>=1.27.0",
     "lxml>=6.0.0",
     "matplotlib>=3.10.3",
+    "myst-parser>=4.0.1",
     "numpy>=2.3.2",
     "pre-commit>=4.2.0",
     "setuptools>=61.0",
     "sphinx>=8.2.3",
+    "sphinx-autobuild>=2025.8.25",
     "sphinx-rtd-theme>=3.0.2",
     "sumolib>=1.24.0",
 ]
