--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "sphinx-autobuild>=2025.8.25",
     "sphinx-rtd-theme>=3.0.2",
     "sumolib>=1.24.0",
+    "torch>=2.8.0",
 ]
 
 [build-system]
