--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "lxml>=6.0.0",
     "matplotlib>=3.10.3",
     "myst-parser>=4.0.1",
+    "notebook>=7.4.7",
     "numpy>=2.3.2",
     "pre-commit>=4.2.0",
     "setuptools>=61.0",
