--- a/scripts/run_incentives_experience_replay.yaml
+++ b/scripts/run_incentives_experience_replay.yaml
@@ -3,7 +3,7 @@ episodes: 500
 
 
 # True if using compliance rate, false otherwise
-compliance_rate: true
+compliance_rate: false
 
 ### Weights for different components of the reward/cost function
 # Weight for Total Travel Time (TTT) of the network
