--- a/scripts/qlearning_discrete_state_exp_replay.yaml
+++ b/scripts/qlearning_discrete_state_exp_replay.yaml
@@ -2,7 +2,7 @@
 episodes: 750
 
 # True if using compliance rate, false otherwise
-compliance_rate: true
+compliance_rate: false
 
 ### Weights for different components of the reward/cost function
 # Weight for Total Travel Time (TTT) of the network
