--- a/scripts/qlearning_no_state_exp_replay.yaml
+++ b/scripts/qlearning_no_state_exp_replay.yaml
@@ -3,7 +3,8 @@ episodes: 750
 
 # True if using compliance rate, false otherwise
 compliance_rate: true
-
+# Whether to use incentives or not
+incentives_mode: true
 ### Weights for different components of the reward/cost function
 # Weight for Total Travel Time (TTT) of the network
 TTT_weight: 0
@@ -23,10 +24,8 @@ epsilon: 0.9
 # Epsilon decay rate per episode (to reduce exploration over time)
 decay: 0.994
 #0.992
-# Learning rate (α) for Q-learning or other value update algorithms
+# Learning rate (α) for Q-learning
 alpha: 0.1
-# Whether to use incentives or not
-incentives_mode: true
 # Total available budget for incentives or policies (can be used as a constraint)
 total_budget:
   - 50000
