--- a/scripts/generate_plots.yaml
+++ b/scripts/generate_plots.yaml
@@ -1,5 +1,7 @@
 # Total available budget for incentives or policies (can be used as a constraint)
 total_budget:
+  - 20000
+  - 30000
   - 50000
   - 100000000
 
@@ -30,6 +32,8 @@ weights:
 labels:
   ttt: "Total Travel Time [h]"
   emissions: "CO2 Emissions [kg]"
+  used_budget: "Used budget"
+  accepted_paths: "Number of accepted paths"
 
 # Titles for plots
 titles:
