--- a/scripts/thompson_sampling.yaml
+++ b/scripts/thompson_sampling.yaml
@@ -2,10 +2,7 @@
 episodes: 750
 
 # True if using compliance rate, false otherwise
-compliance_rate: false
-
-# True if using Upper Confidence Bound for action selection
-upper_confidence_bound: true
+compliance_rate: True
 
 ### Weights for different components of the reward/cost function
 # Weight for Total Travel Time (TTT) of the network
@@ -17,12 +14,6 @@ emissions_weight: 0
 # Total emissions weight
 total_emissions_weight: 0
 
-# Exploration rate for epsilon-greedy policy
-epsilon: 0.9
-# Epsilon decay rate per episode (to reduce exploration over time)
-decay: 0.992
-# Learning rate (α) for Q-learning or other value update algorithms
-alpha: 0.1
 # Whether to use incentives or not
 incentives_mode: true
 # Total available budget for incentives or policies (can be used as a constraint)
