--- a/scripts/qlearning_no_state_exp_replay.yaml
+++ b/scripts/qlearning_no_state_exp_replay.yaml
@@ -2,9 +2,9 @@
 episodes: 750
 
 # True if using compliance rate, false otherwise
-compliance_rate: true
+compliance_rate: False
 # Whether to use incentives or not
-incentives_mode: true
+incentives_mode: True
 ### Weights for different components of the reward/cost function
 # Weight for Total Travel Time (TTT) of the network
 TTT_weight: 0
@@ -29,6 +29,7 @@ alpha: 0.1
 # Total available budget for incentives or policies (can be used as a constraint)
 total_budget:
   - 100000000
+  - 50000
 # Select route selection strategy
 strategy: "logit"
 # Store all the paths
