--- a/scripts/thompson_sampling.yaml
+++ b/scripts/thompson_sampling.yaml
@@ -2,7 +2,7 @@
 episodes: 750
 
 # True if using compliance rate, false otherwise
-compliance_rate: True
+compliance_rate: False
 
 ### Weights for different components of the reward/cost function
 # Weight for Total Travel Time (TTT) of the network
@@ -15,10 +15,11 @@ emissions_weight: 0
 total_emissions_weight: 0
 
 # Whether to use incentives or not
-incentives_mode: true
+incentives_mode: True
 # Total available budget for incentives or policies (can be used as a constraint)
 total_budget:
   - 100000000
+  - 50000
 # Select route selection strategy
 strategy: "logit"
 # Store all the paths
