--- a/scripts/qlearning_binary_state_exp_replay.yaml
+++ b/scripts/qlearning_binary_state_exp_replay.yaml
@@ -19,14 +19,13 @@ buffer_capacity: 1
 batch_size: 1
 
 # Exploration rate for epsilon-greedy policy
-epsilon: 0.9
+epsilon: 0.8
 # Epsilon decay rate per episode (to reduce exploration over time)
 decay: 0.992
-# Learning rate (α) for Q-learning or other value update algorithms
+# Learning rate (α) for Q-learning
 alpha: 0.1
 # Total available budget for incentives or policies (can be used as a constraint)
 total_budget:
-  - 50000
   - 100000000
 # Select route selection strategy
 strategy: "logit"
