--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,5 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
-      packages = ["src/co2Emissions"]
+      packages = ["src/marl_incentives"]
 
