--- a/scripts/qlearning_binary_state_exp_replay.yaml
+++ b/scripts/qlearning_binary_state_exp_replay.yaml
@@ -1,8 +1,8 @@
 # Number of training episodes for the RL agent
-episodes: 750
+episodes: 2
 
 # True if using compliance rate, false otherwise
-compliance_rate: false
+compliance_rate: true
 
 ### Weights for different components of the reward/cost function
 # Weight for Total Travel Time (TTT) of the network
@@ -24,7 +24,7 @@ epsilon: 0.9
 decay: 0.995
 
 # Learning rate (α) for Q-learning
-alpha: 0.1
+alpha: 0.01
 # Total available budget for incentives or policies (can be used as a constraint)
 total_budget:
   - 10000
